test/fail_compilation/protattr1.d
/*
TEST_OUTPUT:
---
Error: attribute __anonymous 'undefined' is not one of ancestor packages of module 'protection.subpkg.test1'
---
*/
import protection.subpkg.test1;
